Updating Aug '24 drafts

--- a/2024/2024-08-11.md
+++ b/2024/2024-08-11.md
@@ -1,42 +1,89 @@
-# tktktk
-## tktktk
+# A new chapter for w3w
+## The newsletter is moving into its next phase on a new platform, including subscriptions for the first time.
 
 ![Friendly sign reading: "Come in. We're open."](https://images.unsplash.com/photo-1473187983305-f615310e7daa)
 *Photo by Álvaro Serrano via Unsplash*
 
 _By_ [_Peter A. McKay_](https://pmckay.com)
 
-<!-- Lede item. Should run ~450 words. -->
+<!-- Lede item. Should run ~450 words. Intro, CTA to new Substack setup... -->
+
+**I'm elated to report w3w has now migrated to Substack** as its primary publishing platform.
+
+Nothing at all against MailChimp, mind you. It was a great home for the newsletter since 2017. But I truly believe Substack is the right place for w3w at this particular phase of its development, with new creative and monetization features that will help it continue to grow.
+
+That includes a nifty new set of [subscription tiers](https://w3wnews.substack.com/subscribe/) that will help me monetize my work on the newsletter -- and thus continue to put it together for you every week.
+
+If you're reading this in your inbox right now, I've already added you to the free tier, just like before on MailChimp. No need for you to do anything further to continue getting these weekly updates as you have previously.
+
+But if you're inclined, there are now also available:
+
+- A monthly subscription for $7.
+
+- A discounted annual option at $65.
+
+- An open-ended Founders Membership to support the newsletter at some other level you feel comfortable with.
+
+These options all offer additional benefits like full access to the w3w archive, the ability to comment, and more. I'm also starting a members-only Discord channel soon where you'll be able to interact with myself and other community members.
+
+Among the new [subscription options](https://w3wnews.substack.com/subscribe/) you'll see there are also [group sales](https://w3wnews.substack.com/subscribe?group=true) options and [gift options](https://w3wnews.substack.com/subscribe?gift=true) available, if you want to buy subscriptions for employees, friends, or loved ones.
+
+Thanks again to everyone who has supported the newsletter over the years, in any form. Frankly, I'm committed to maintaining a free tier always. That way, the newsletter can reach the widest possible audience of folks with even a passing interest in making the web a better place through decentralization and emerging technologies.
+
+That said, I think it also makes sense to start creating some additional functionality, content, and community for people who want to engage more deeply. And, yeah, it just makes sense to pay some bills as well while I'm at it. 😊
+
+*Check out the new w3w [subscription options](https://w3wnews.substack.com/subscribe/) today!*
 
 ### Week in Review: Aug. 4-10, 2024
 
-<!-- Leftovers from last week...
+- **A federal court ruled that Google violated U.S. antitrust law,** abusing its market power to squelch competition in search. Google says it will appeal the decision, which could have far-reaching effects on how users experience the internet everyday. Potential remedies and penalties for the antitrust violations will be determined at a later hearing. ([Washington Post](https://www.washingtonpost.com/technology/2024/08/05/doj-google-monopoly-trial-judgment/))
 
-- https://www.salon.com/2024/08/03/doj-lawsuit-tiktok-illegally-collected-personal-data-from-children/?in_brief=true
+- **Token prices rallied late in the week** as fears of a possible U.S. recession [subsided](https://decrypt.co/243928/bitcoin-briefly-tops-62000-as-global-recession-fears-subside). Bitcoin leapt 12% Thursday, its [biggest one-day gain](https://www.coindesk.com/markets/2024/08/09/bitcoins-12-price-rally-on-thursday-was-the-biggest-since-february-2022/) in more than two years. The rally [continued](https://www.cnbc.com/video/2024/08/09/bitcoin-bounces-back-above-60000-cryptocurrency-rise-continues-end-week-cnbc-crypto-world.html) through Friday, effectively wiping out losses from earlier in the week...
 
-- More mishaps at Meta: Cocaine ads: https://www.wsj.com/tech/meta-cocaine-opioids-ads-dea8e0fc?st=ig3nqpb6pslvtiz&reflink=desktopwebshare_permalink | Texas court decision. Link tk.
+- **But prices have stalled over the weekend.** As of Sunday evening in New York, bitcoin's 7-day performance is essentially flat, with the token hovering just shy of $60,000 per coin, according to [CoinMarketCap](https://coinmarketcap.com/).
 
-- https://www.coindesk.com/policy/2024/07/30/sec-intends-to-amend-complaint-against-third-party-tokens-like-sol-in-binance-case/
+- **Wall Street heavyweight Franklin Templeton's** blockchain-based money market fund launched on the Arbitrum network Thursday. The fund represents a high-profile case of real-world assets (RWA) going on-chain -- a practice the industry is hoping to popularize more broadly. ([Decrypt](https://decrypt.co/243849/franklin-templeton-fobbx-blockchain-fund-arbitrum))
 
-- SV folks for Kamala: https://www.nytimes.com/2024/07/31/technology/silicon-valley-investors-support-kamala-harris.html
+- **Meltem Demirors,** former chief strategy officer of CoinShares, is seeking to raise $75 million for two new venture funds, according to filings with America's Securities and Exchange Commission. ([The Block](https://www.theblock.co/post/310074/former-coinshares-cso-meltem-demirors-seeks-to-raise-75-million-for-two-new-venture-funds-filings))
+
+- **Crypto in South America:** The International Monetary Fund admitted in [a statement](https://www.imf.org/en/News/Articles/2024/08/06/pr-24302-el-salvador-imf-staff-statement) that the dire risks it warned of in 2021 when El Salvador recognized bitcoin as legal tender "have not yet materialized." Still, IMF is [continuing talks](https://decrypt.co/243631/bitcoin-risks-not-yet-materialized-el-salvador-imf) with Salvadorean officials about ways to improve the country's finances long-term. Separately, Stellar released a video [telling the story](https://x.com/StellarOrg/status/1821517464368296203) of an expat Australian entrepreneur who used stablecoin payments via the Stellar chain to pay his employees in a remote, conflict-torn town in Colombia. The man had previously been shot while trying to transport cash from a local bank to pay the workers.
+
+- **FTX reached an agreement with U.S. commodity regulators** that will speed repayment of $12.7 billion to the bankrupt exchange's customers. The Commodity Futures Trading Commission agreed not to seek payment of regulatory damages until after customers have gotten their money. ([Reuters](https://www.reuters.com/technology/crypto-exchange-ftx-ordered-pay-127-bln-customers-us-cftc-says-2024-08-08/))
+
+- **Montenegro's Supreme Court again delayed** Terraform Labs founder Do Kwon's extradition to South Korea. ([The Block](https://www.theblock.co/post/310305/montenegrin-court-once-again-postpones-do-kwons-extradition-to-south-korea))
+
+<!--
+
+CBK...
+
+- ([Bitcoin.com](https://news.bitcoin.com/crypto-gaming-showdown-why-lovely-legends-is-set-to-outshine-hamster-kombat/))
+
+- ([TMZ](https://www.tmz.com/2024/08/07/caitlyn-jenner-auctioning-1976-olympic-gold-medal-blockchain/))
+
+- Cointelegraph: Blockchain reducing air cargo fees. <!-- Need link
+
+- SV folks for Kamala: https://www.nytimes.com/2024/07/31/technology/silicon-valley-investors-support-kamala-harris.html <!-- Could stand to use a more updated story here, if one is available. Check!  https://www.nytimes.com/2024/08/07/opinion/kamala-harris-google-antitrust.html | https://decrypt.co/243654/crypto-for-harris-town-hall-organizers
+
+- Yuge trump crypto announcement supposedly pending. Check back for updates, links later in the week...
+
+- https://www.cjr.org/business_of_news/separate-unequal-glorious-grueskin-christensen-harvard-business-wall-street-wsj.php
+
+- New Yorker: Trump's dangerous embrace of crypto bros. https://news.google.com/read/CBMiqAFBVV95cUxQSUkyQl9iTmJjZWxpbWI4OGYzd3pGQjVUNlY0OEdoT21xaV9xaVBKNFlVem9CLTF2bkVWNW1OQTM3RFBrc2tnbDdFaXU1TUR2bmV6T1pNc2J0TldjZktKTW1nMXVzUkJubmxOeVhsMmFpZTRqSGJ3NE9hQ19HTW9DUnc0dk82d0U3dVNhWlJsdW41OHgxVi02ZXV4bV8tLUdmbDVpZ2Z3YVI?hl=en-US&gl=US&ceid=US%3Aen
 
 -->
-
-- tk
-- tk
 
 ### Odds & Ends
 
-- https://www.nytimes.com/interactive/2024/07/31/opinion/cats-vs-dogs.html?123=&campaign_id=39&emc=edit_ty_20240731&instance_id=130271&nl=opinion-today&regi_id=114938163&segment_id=173681&te=1&user_id=7e4e941ef0933caa796c2ec4ae5440e9
+- **Future air conditioners may work similarly to batteries,** storing a mix of chilled water and chemical solutions to defrost when needed. Such devices are designed to be a cheaper cooling option during periods of peak electricity demand. ([MIT Technology Review](https://www.technologyreview.com/2024/08/06/1095707/air-conditioner-battery/))
 
-- https://www.nytimes.com/interactive/2024/07/31/opinion/dmv-inequality.html?123
+- **"Death by selfie" has increased globally** to the point that it is now about [four times more common](https://slate.com/technology/2024/08/selfie-death-cliff-waterfall-hike.html) than fatal shark attacks, according to a [2022 study](https://academic.oup.com/jtm/article/29/5/taab170/6404466?login=false#369471915). The term refers to darkly slapstick mishaps in which people plunge from cliffs, waterfalls, or other structures while trying to take pictures on their smartphones for social media. 🤦‍♀️
 
-- https://hbr.org/2024/08/why-wisdom-work-is-the-new-knowledge-work
+_**That's it for now. Thanks for reading the newsletter today!**_
 
-<!-- Pickup boilerplate from last week, with iterations as needed. Some ideas...
+_**About me: I'm a New York-based writer and marketer with more than seven years' experience creating content about web3. This newsletter grew out of the early stages of that journey, as I thought it might be useful to share what I was rapidly learning at the time about blockchain technology and decentralization with other people interested in such stuff.**_
 
-- Add CTA for subscriptions/donations for next week.
--> Add editorial policy to website, link in boilerplate.
-- Integrate recent LaGuardia bio...
+ _**During the COVID pandemic, I served as Head of Content for the censorship-resistant platform Blogchain. I have also done marketing and content work for the World Economic Forum, the Telos Foundation, Dispatch Labs, and Vice News. Previously, I spent over a decade as an award-winning markets reporter at the Wall Street Journal.**_
 
--->
+ _**To reach me directly with feedback, a story suggestion, or other queries, please email peter[at]w3w[dot]media.**_
+
+ _**Best wishes for a healthy and productive week ahead.**_ 😊
