Updating Aug '24 drafts

--- a/2024/2024-08-25.md
+++ b/2024/2024-08-25.md
@@ -1,200 +1,61 @@
-<!--
+# A tale of two social media
+## The ostensible post-Meta era so far is the best of times -- and the worst.
 
-Share on LinkedIn and/or Twitter...
+![User erasing Facebook from his smartphone screen with a stylus](https://images.unsplash.com/photo-1522159698025-071104a1ddbd?q=80&w=3570&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+*Photo by Thought Catalog via Unsplash*
 
-- Twitter: https://www.mlb.com/news/sean-manaea-surprises-fans-playing-softball-in-central-park
+**I honestly find msyelf torn** between optimism and pessimism about social media lately. I see tangible reasons to support either sentiment, really.
 
-- LinkedIn: https://blog.cloudflare.com/declaring-your-aindependence-block-ai-bots-scrapers-and-crawlers-with-a-single-click
+Social is certainly in greater flux now than it has been in a long time, perhaps since Facebook famously overtook MySpace in the early 2000s. Users are increasingly wary of platforms' collection and usage of their data. And regulators are increasingly willing to reign in tech giants' business practices, including greater vigilance [regarding antitrust](https://www.cnbc.com/2024/07/25/meta-to-be-hit-with-first-eu-antitrust-fine-for-linking-marketplace-and-facebook-sources-say.html).
 
-- Substack (subs): https://hbr.org/2024/08/why-wisdom-work-is-the-new-knowledge-work
+Those are ultimately the optimistic parts, in my opinion. They effectively create opportunities for upstarts like [Farcaster](https://www.farcaster.xyz/), [Nostr](https://nostr.com/), [Spoutible](https://spoutible.com/start), and [Mastodon](https://joinmastodon.org/) to either gain a foothold for the first time or, in Mastodon's case, get [a second look](https://www.cnn.com/2022/11/08/tech/mastodon-twitter-explainer-trnd/index.html) from users after years of its developers plugging away. Heck, even trusty RSS, whose "death" has often been inaccurately reported, is in fact still very much [alive and kicking](https://www.wired.com/story/best-rss-feed-readers/).
 
-- https://decrypt.co/243920/unfk-gives-artists-10000-for-community-prank-mocking-gary-gensler
+That said, in terms of true mass reach and economic power, we must admit Meta's hegemony isn't truly broken yet. There is still much harm to real users that comes with that everyday. Plus we have the rising threat of AI deepfakes, including as potential weapons in state-sponsored disinformation campaigns.
 
-- Harrison's concert for Bangladesh is now streaming: https://www.salon.com/2024/08/09/george-harrison-concert-for-bangladesh/ | https://lnk.to/TheConcertForBangladesh
+There is also a curious problem I see playing out at both the giants *and* within some startups. It's a gross misreading of what moderation is, why it's absolutely necessary, and how it differs from censorship. (Think of pretty much anything Elon Musk has said on these topics since buying Twitter, for example.)
 
-- https://www.space.com/stars-near-sun-milky-way-history-gaia-space-telescope
+I've blogged [at length](https://peteramckay.medium.com/our-digital-commons-is-broken-6d5147c958da) about these distinctions previously. But to summarize: Most social platforms are ultimately private spaces, not true public commons, because they aren't collectively owned.
 
-- https://www.washingtonpost.com/dc-md-va/2024/08/05/12-year-old-maryland-fishing-award-first-female/
+Thus it really shouldn't be considered some great moral affront to "free speech" for the owners of a private space to set some basic parameters around how it's used, to enforce those rules, and to kick out bad actors if they deem it necessary. That's all moderation is.
 
-- https://themerkle.com/understanding-the-relationship-between-market-cap-and-token-price-a-closer-look/
+To put it a different way, there's the Golden Rule that entrepreneur Anil Dash offered way back [in 2011](https://www.anildash.com/2011/07/20/if_your_websites_full_of_assholes_its_your_fault-2/):
 
-- An old link from CoinDesk re: intersection of AI and crypto. Could also be a good subscriber link.  https://www.coindesk.com/consensus-magazine/2024/05/23/why-decentralized-ai-is-gaining-steam/
+"If your website's full of assholes, it's your fault."
 
--->
-
-# tktk
-## tktk
-
-![]()
-*Photo by tktktk via tktktk
-
-
-TKTKTKTK
-
-TKTKTKTK
-
-
-
-
-
-
-
-
-
-<!--
-
-
-# How '80s boxing offers insights for fixing our broken internet.
-## Yes, tech's heavyweights should duke it out. But the little guys need their title shots as well.
-
-![](https://upload.wikimedia.org/wikipedia/commons/1/1a/Sugar-ray-leonard_vs_Benitez.jpg)
-*Photo by tktktk via tktktk
-
-
-
-
-
-
-<!-- 450-word riff on the madness of Worldcoin, new WSJ article.
-
-Sam Altman's WorldCoin project
-
-
-
-
-Why not aim AI at all the fakery and lies that are already out there, so it helps us catch the stuff rather than aid in its proliferation?
-
-The impulse to create a new coin is strong. Not invented here.
-
-Why can't you just send them bitcoin at fixed intervals?
-
-
--->
-
-<!--
-
-# Why government is a necessary but imperfect tool against Big Tech
-## Part 1 of 3 in a series about the levers for countering the platforms' oligarchy
-
-![Close-up of a Monopoly board game](https://w3w.news/img/ged-carroll-2500.jpg)
-*Photo by Ged Carroll via Flickr under [Creative Commons License](https://creativecommons.org/licenses/by/2.0/). Photo cropped slightly from [Carroll's original](https://www.flickr.com/photos/renaissancechambara/2951844423/in/photolist-5uQYvn-jaRcES-qvxovj-qggAJN-qgfVi1-qxDHqe-pAPYbQ-2XNYr-qgpuSt-qxPsuM-qggAkb-pB4ohP-J5Pmx-5uQY4v-pAPXZY-qgfWHA-qxDKsF-pAPZ6A-3J6xoG-8ujMau-38PKDo-38PKRE-38PKKY-74kf47-xDw5K-38KbyF-e51418-xDw7b-5RKRwp-xDw9S-xDwCw-xDw49-7ML5A1-xDwHj-7ML5Xj-7ML5ns-PnzCb3-7MG6dn-7MG5BK-7MG6UT-7ML6jJ-7ML6Rf-xDw8A-xDwFM-xDw2j-xDvZr-6X5WUA-xDvX7-GKR5fB-8cqFAn).*
-
-_By_ [_Peter A. McKay_](https://pmckay.com)
-
-**When mass usage of the web began spreading** back in the 1990s, absolutely no one was giddily rooting for a day to come when just a handful of giant public companies, all based in a single country and worth [over $1 trillion each](https://finance.yahoo.com/news/trillion-dollar-companies-222307746.html), might dictate how everyone on earth experiences the web.
-
-That was definitely *not* the goal. Yet here we are, facing exactly such as status quo.
-
-I do still hold out hope the situation can be solved, however. Call me naive, but I see three major levers we can pull to make the web a more egalitarian place, as it was envisioned [early on](https://peteramckay.medium.com/a-brief-release-history-of-the-web-aeef5bb3b814).
-
-Each lever has its own strengths and weaknesses, conveniently demonstrated by events of just the last few weeks, as I'll describe below.
-
-No single one of these things alone can fix the ills of Big Tech -- a crucial qualifier I think we sometimes forget. But I believe a sustained combination of them, each used in proper measure over time, would make a massive difference for the better.
-
-### 1) Government
-
-This is perhaps the most obvious and well-publicized lever of late. The great strengths of the government are its unique powers under law and the sheer scale of its resources, which are a handy counterweight to the vast fortunes of Big Tech.
-
-For example, in a court proceeding such as the U.S. Department of Justice's [successful antitrust suit](https://www.theverge.com/24215684/doj-jonathan-kanter-antitrust-google-monopoly-verdict-win-decoder-podcast-interview) against Google, decided earlier this month, the tech giant couldn't just delay interminably, run up the plaintiff's legal fees, and outlast it, as Google might have done with a smaller private-sector rival.
-
-Of course, there's also the legislative option of writing entirely new laws to counter the downsides of emerging technologies as society adopts them. Congress is currently weighing a number of proposals in that vein regarding both crypto and AI, including a bill [passed by the Senate](https://decrypt.co/244411/u-s-senate-passes-anti-deepfake-law-targeting-non-consensual-pornography) on Monday creating civil penalties for pornographic "deepfake" images made without the depicted person's consent.
-
-In my opinion, that's a great idea. But the bill also neatly illustrates one of the weaknesses of government action: It's slow.
-
-In order to go into force as law, that Senate proposal still has to pass the 435-member House of Representatives as well and be signed by the President. Until that happens, really, no actual good has been accomplished. No one's actually been protected from anything.  
-
-The situation is made even more dire by the currently heightened polarization of U.S. To a historic degree, the current Congress has been demonstrably unproductive in terms of ushering bills through all the steps to signage.
-
-
-
-
-
-
-
-
-### 2) Reputation
-
-Big Tech companies don't want to lose customers, and their employees like to cast themselves as good people in general. Maybe we can use that to cajole or convince them simply to act better on their own.
-
-- FB kills anti-misinformation tool https://www.npr.org/2024/08/14/nx-s1-5074143/meta-shutters-tool-used-to-fight-disinformation-despite-outcry | Nieman: https://www.niemanlab.org/2024/08/does-legacy-news-help-or-hurt-in-the-fight-against-election-misinformation/
-
-### 3) Evolution
-
-Build and adopt new products in lieu of the Death Stars' stuff to break their grip on markets and mindshare. Notice I didn't call this process "innovation" - a somewhat abused word these days that only addresses makers' part of the equation. Users also have to play a role here by purposefully trying and migrating to new tools.
-
-Frankly, I'd say some measure of each of the above approaches is probably in order right now, depending on which company and product category one is discussing. But in general, the option that's the most powerful, underutilized, and least discussed is the third - evolution.
-
-As long as our conversation about tech is premised on the idea that everyone absolutely has to use Facebook until the sun flickers out in the sky, Facebook wins. Ditto with assuming Google's permanent dominance in search, Amazon's in retail, and so on.
-
-Unfortunately, this is exactly what most tech press and even some people in the tech industry itself tend to assume, often tacitly. These assumptions then have a nasty way of becoming self-fulfilling.
-
-The good news is that so could a vision of a world with less oligarchy if more people simply dared to imagine it, then set about making it happen, step by step.
-Users' role: 
-
-- USDC issuer Circle's CEO said tap to pay is coming soon to the iPhone. ([Decrypt](https://decrypt.co/244853/usdc-tap-to-pay-on-apple-iphone-incoming-soon-circle-ceo))
-
-
-
-
-
-_By_ [_Peter A. McKay_](https://pmckay.com)
-
-**When I was a teenager,** you did not need to be an avid fight fan at all to be aware of three truly world-famous boxers: Mike Tyson, Buster Douglas, and Sugar Ray Leonard.
-
-The one term the press frequently used to describe Mike Tyson in his heyday was "bully." He represents Big Tech.
-
-Buster Douglas is in Iron Mike's weight class, so he's literally capable of going toe-to-toe with him. That's helpful as a starting point, of course, and he can sometimes deal Tyson a significant loss.
-
-That said, any success he has against Mike is doomed to be fleeting. He's ultimately just not really at the same dazzling talent level. Plus he's big and slow. Yes, Douglas on his best day can be Tyson when he's having a bad day. But if they're *both* having a good day, Tyson wins every time.
-
-Hence Douglas is like the government trying to regulate tech.
-
-Leonard isn't in Tyson's weight class, but they're arguably of similar skill levels considering that they're both in the Boxing Hall of Fame. (Douglas isn't.) But if Leonard succeeds enough, he can always go up in weight class. So who knows what his ceiling is.
-
-Hence Leonard is like a startup.  
-
--->
-
-<!--
-
-Leftovers from last week...
-
-- **The token market's summer swoon continued.** Selling [on Thursday](https://www.coindesk.com/markets/2024/08/15/bitcoin-tumbles-back-under-58k-as-crypto-quickly-crumbles-thursday-afternoon/) as investors favored U.S. stocks over crypto. As of late Friday in New York, bitcoin posted a 7-day decline of 4%, while ether was down 1%. Meanwhile, the global crypto market's valuation was steady at $2.1 trillion, according to [CoinMarketCap](https://coinmarketcap.com/).
-
-- https://www.wsj.com/articles/how-the-crowdstrike-tech-outage-reignited-a-battle-over-the-heart-of-microsoft-systems-72b62c90?st=x8ztqwydvihed5o&reflink=desktopwebshare_permalink
-
-- Marathon is putting $250 million into bitcoin. https://decrypt.co/244925/bitcoin-miner-marathon-digital-stock-jumps-250-million
-
-- New Crypto4Harris group forms: https://www.reuters.com/world/us/crypto-democrats-rally-behind-harris-campaign-push-policy-revamp-2024-08-15/ | Other  politics updates: https://www.nbcnews.com/politics/2024-election/republicans-claim-betrayal-cryptocurrency-pac-backs-democrats-rcna166470 | https://www.theblock.co/post/311304/senate-majority-leader-chuck-schumer-sets-goal-to-pass-crypto-legislation-by-the-end-of-this-year | https://www.cnbc.com/2024/08/14/schumer-says-crypto-legislation-can-pass-the-senate-this-year-on-crypto4harris-.html
-
-- **Mixed news on crypto from major Wall Street firms:**  https://www.coindesk.com/markets/2024/08/16/bitcoin-ether-held-in-blackrock-etfs-cross-those-of-grayscales-for-the-first-time/ | Fidelity exploring several new products. https://www.theblock.co/post/311266/fidelity-head-of-digital-asset-management-suggests-stablecoins-tokenized-treasurys-and-onchain-credit-may-be-in-the-offing | Morgan Stanley has a big position in bitcoin ETFs. https://www.theblock.co/post/311289/morgan-stanley-reveals-187-million-position-in-blackrocks-spot-bitcoin-etf-nearly-sells-out-of-gbtc-in-q2 | Vanguard won't launch crypto ETFs. https://www.theblock.co/post/311258/new-vanguard-ceo-says-asset-manager-will-not-be-launching-crypto-etfs
-
--->
-
+That little maxim is still applicable as ever, I'd say. In fact, as some of the week's headlines will demonstrate, it seems the literal and figurative costs to social-media entrepreneurs for *not* kicking out assholes are piling up rapidly right now...
 
 ### Week in Review: Aug. 18-24, 2024
 
+- **French authorities arrested Telegram founder and CEO Pavel Durov on Saturday.** The BBC [reports](https://www.bbc.com/news/articles/ckg2kz9kn93o) that police are investigating whether Telegram's relatively lax approach to content moderation effectively enables criminal activity on the platform. Durov's lawyer decried the arrest as "absoultely ridiculous" and an attack on free speech. Telegram's TON token has [plummeted more than 14%](https://www.coindesk.com/markets/2024/08/25/ton-down-14-as-telegram-ceo-pavel-durov-arrested-in-france/) on the news.
 
+- **The Wall Street Journal reported on Tuesday** that Elon Musk's move to take Twitter private in late 2022 is now quantifiably the [biggest money-losing deal](https://www.wsj.com/tech/elon-musks-twitter-takeover-is-now-the-worst-buyout-for-banks-since-the-financial-crisis-3f4272cb?st=wovnfcnjp2m90wt&reflink=desktopwebshare_permalink) for Wall Street's investment banks since the 2008 financial crisis. The banks have been stuck holding more than $13 billion debt related to the buyout for nearly two years. Yikes.
 
-- tk ([]())
+- **Token prices soared, and major U.S. stock indexes neared new all-time highs.** The rally was [driven](https://www.investopedia.com/dow-jones-today-08232024-8700419) by new remarks from Federal Reserve Chair Jerome Powell, who clearly signaled the central bank will soon cut its benchmark interest-rate target. Such a move would effectively lower borrowing costs throughout the economy and encourage leveraged bets on riskier investments on Wall Street. Bitcoin jumped 7% on the week. The S&P 500 and Dow Jones Industrial Average rallied as well and are both less than 1% away from new records entering Monday's trading.
 
-- tk ([]())
+- **Bitcoin miner Bitfarms** announced its acquisition of rival Stronghold Digital for $175 million in stock and assumed debt. ([CoinDesk](https://www.coindesk.com/business/2024/08/21/bitcoin-miner-bitfarms-to-buy-rival-stronghold-digital-for-175m-in-stock-debt/))
 
-- tk ([]())
+- **El Salvador's government** now holds more than $360 million in bitcoin and is buying about one full bitcoin a day. ([Decrypt](https://decrypt.co/246146/el-salvador-361-million-bitcoin-nation-buys-1-btc-daily))
+
+- **A federal judge in Miami allowed** part of a class-action lawsuit to proceed concerning the role of basketball legend Shaquille O'Neal in promoting the non-fungible token project Astrals. ([CoinDesk](https://www.coindesk.com/policy/2024/08/19/shaquille-oneal-will-have-to-defend-some-of-the-allegations-against-him-in-the-astrals-nft-lawsuit/))
+
+- **There was no mention of bitcoin or crypto** in the policy platform released ahead of the Democratic Party's convention in Chicago last week. ([Decrypt](https://decrypt.co/245320/democratic-party-platform-no-mention-bitcoin-crypto))
+
+- **Mayor VIC?** A candidate seeking to run a small town in Wyoming is pledging to defer decisionmaking to an AI dubbed Virtual Integrated Citizen, if he's elected in November. The proposal is believed to be a first in U.S. politics -- and a potential harbinger of future races as AI becomes more widely adopted. ([Washington Post](
+https://www.washingtonpost.com/technology/2024/08/19/artificial-intelligence-mayor-cheyenne-vic/))
+
+- **A new study in Australia** suggests advances in AI are outpacing growth in media literacy. ([Decrypt](https://decrypt.co/245283/generative-ai-outpacing-media-literacy-leaving-people-vulnerable))
 
 ### Community
 
-- tk
-- CTA for new subs <!-- Pickup from last week -->
-- Add BTC addy...
-- QR code is here. <!-- Create image, upload to https://w3w.news/btc-tipjar -->
+- **Become a paid subscriber to w3w.** The newsletter offers several paid options, each with extra goodies compared to the free tier. That includes access to comment on Substack, subscriber-only content posted there, and you'll receive an invite to a w3w Discord I'm launching soon. Plus you get my deepest gratitude and some good karma for supporting w3w. [Sign up today!](https://w3wnews.substack/subscribe) ☯️ 😉  
 
 ### Odds & Ends
 
-- https://www.salon.com/2024/08/18/cats-seem-to-grieve-the-of-companion-pets-study-finds/
+- **Awww.** A new study suggests that housecats mourn the deaths of companion pets. ([Salon](https://www.salon.com/2024/08/18/cats-seem-to-grieve-the-of-companion-pets-study-finds/))
 
-- Meteor shower over Stonehenge: https://www.livescience.com/space/astronomy/perseid-meteor-shower-rains-shooting-stars-over-stonehenge-in-glorious-astrophotography-image
+- **ICYMI:** Photographer Josh Dury recently [caught breathtaking photos](https://www.livescience.com/space/astronomy/perseid-meteor-shower-rains-shooting-stars-over-stonehenge-in-glorious-astrophotography-image) of the Perseid meteor shower over Stonehenge.
 
+- **Bautista Bomb, anyone?** Action star Dave Bautista says he has been sneaking moves from his days as a WWE wrestler into his movies for years. ([ComicBook.com](https://comicbook.com/movies/news/dave-bautista-wwe-finishing-move-movie-easter-egg-my-spy-2-exclusive/))
 
 _**That's it for now. Thanks for reading the newsletter today!**_
 
